# tao2tex

./: .gitignore  Blog Title is taken from here. Span tag can be replaced-Post title taken from the h1 header..fdb_latexmk  Blog Title is taken from here. Span tag can be replaced-Post title taken from the h1 header..fls  LICENSE  README.md  batch.txt  buggy.txt  debug.txt  html2_pretty.html  out.tex  out.txt  preamble.tex  pyproject.toml  requirements.txt  tao2tex.py  test.html  test1.html  test2.html  test3.html  tested.txt
