
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Calvin Khor", email = "calvin_khor@hotmail.com"},
]
dependencies = [
    "beautifulsoup4==4.11.1",
    "emoji==2.2.0",
    "lxml==4.9.1",
    "requests==2.31.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
